--- a/site/style.css
+++ b/site/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
 html,
 body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  color: hsl(228, 12%, 48%);
   background-color: hsl(30, 38%, 92%);
   width: 100%;
   height: 100%;
@@ -11,6 +14,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 #precos {
   align-items: center;
@@ -45,6 +49,11 @@ p {
   font-weight: 500;
   color: hsl(228, 12%, 48%);
 }
+h1 {
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+  color: hsl(0, 0%, 0%);
+}
 h2 {
   font-family: "Fraunces", serif;
   font-weight: 700;
@@ -74,7 +83,7 @@ button {
   display: flex;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
-  font-weight: 700;
+  font-weight: 500;
   height: 50px;
   padding: 10px 16px;
   position: relative;
@@ -85,4 +94,13 @@ button {
 }
 button:hover {
   background-color: hsl(158, 49%, 15%);
+}
+.attribution {
+  display: flex;
+  font-size: 11px;
+  text-align: center;
+  margin-top: 20px;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
