--- a/style.css
+++ b/style.css
@@ -105,14 +105,30 @@ button {
 button:hover {
   background-color: hsl(158, 49%, 15%);
 }
+
 .attribution {
-  display: flex;
-  font-size: 11px;
+  padding-top: 10px;
   text-align: center;
-  margin-top: 20px;
+  font-family: "Montserrat", sans-serif;
+  color: hsl(228, 12%, 48%);
+  font-size: 11px;
 }
-.attribution a {
-  color: hsl(228, 45%, 44%);
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  color: hsl(228, 12%, 48%);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 692px) {
